[package]
name = "cockroach_test"
version = "0.1.0"
edition = "2024"

[dependencies]

# Async runtime
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time", "sync"] }

# Database (CockroachDB uses Postgres wire protocol)
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
postgres-native-tls = "0.5"
native-tls = "0.2"

# Config + serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "fast-rng", "serde"] }
rand = "0.8"
anyhow = "1.0"
url = "2.5"
ctrlc = "3.4"

mimalloc = { version = "0.1", default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[profile.release]
opt-level = 3           # Maximum optimization
lto = "thin"            # Link-time optimization (thin is faster to compile than "fat")
codegen-units = 1       # Better optimization, slower compile
strip = true            # Strip symbols to reduce binary size
panic = "abort"         # Smaller binary, faster panic handling
